# autosweeper

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/actions/setup/: action.yml
.github/workflows/: cmake.yml
asw/: CMakeLists.txt
asw/include/asw/: Array2d.h  Cell.h  FixedArray2d.h  IScreen.h  ITesseract.h  Image.h  ImageMatchingPlayingField.h  InMemoryPlayingField.h  Logger.h  Match.h  MdArray.h  MineField.h  MinesweeperScreen.h  PlayingField.h  Position.h  ScreenDetectionPlayingField.h  Size.h  Solver.h  Tesseract.h  TextDetectionPlayingField.h  Vector2d.h  algorithm2d.h  find_in_image.h  predict_mines.h
asw/src/: Cell.cpp  ImageMatchingPlayingField.cpp  InMemoryPlayingField.cpp  MineField.cpp  MineFinder.cpp  MineFinder.h  MinesweeperScreen.cpp  ObviousMineFinder.cpp  ObviousMineFinder.h  PlayingField.cpp  PlayingFieldWithMines.cpp  PlayingFieldWithMines.h  SafeField.cpp  SafeField.h  ScreenDetectionPlayingField.cpp  Solver.cpp  Tesseract.cpp  find_in_image.cpp  find_in_image.h  predict_mines.cpp  predict_mines.h
asw/test/: Algorithm2DTest.cpp  CMakeLists.txt  CellTest.cpp  EvaluationTest.cpp  FindInImageTest.cpp  ImageMatchingPlayingFieldTest.cpp  InMemoryPlayingFieldTest.cpp  MineFieldTest.cpp  MineFinderTest.cpp  ObviousMineFinderTest.cpp  PlayingFieldTest.cpp  PlayingFieldWithMinesTest.cpp  PredictMinesTest.cpp  SafeFieldTest.cpp  ScreenDetectionPlayingFieldTest.cpp  SolverTest.cpp  StringMaker.h
aswui/: CMakeLists.txt  main.cpp
aswui/include/aswui/: CellConstSpanWidgetQt.h  ConstCellSpanWidgetQt.h  LoggerWidgetQt.h  MinePredictionsWidgetQt.h  PlayingFieldWidgetQt.h
aswui/src/: CellConstSpanPresenter.h  CellsWidgetQt.cpp  CellsWidgetQt.h  ConstCellSpanPresenter.cpp  ConstCellSpanPresenter.h  ConstCellSpanWidgetQt.cpp  LoggerWidgetQt.cpp  MinePredictionsPresenter.cpp  MinePredictionsPresenter.h  MinePredictionsWidgetQt.cpp  PlayingFieldPresenter.cpp  PlayingFieldPresenter.h  PlayingFieldWidgetQt.cpp
aswui/test/: CMakeLists.txt  ConstCellSpanPresenterTest.cpp  MinePredictionsPresenterTest.cpp  PlayingFieldPresenterTest.cpp  StringMaker.h
autosweeper/: autosweeper.sln  autosweeper.vcxproj  autosweeper.vcxproj.filters
autosweeper/include/asw/: MineField.ixx
autosweepertest/: MineFieldTest.cpp  autosweepertest.vcxproj
msw/: CMakeLists.txt
msw/include/msw/: MineField.h  PlayingField.h
msw/src/: Evaluation.cpp  Evaluation.h  MineField.cpp  PlayingField.cpp
msw/test/: CMakeLists.txt  MineFieldTest.cpp  PlayingFieldTest.cpp  SolverTest.cpp
